--- a/memorial/index.html
+++ b/memorial/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="quicknote.css" />
+    <link rel="stylesheet" href="quicknote.css">
+    <link rel='icon' href='../icons/dust.png' type="image/png">
+    <title>Thanos Memorial</title>
 </head>
 
 <body>
