thanus img and css

--- a/memorial/index.html
+++ b/memorial/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="quicknote.css">
+    <link rel="stylesheet" href="memorial.css">
     <link rel='icon' href='../icons/dust.png' type="image/png">
     <title>Thanos Memorial</title>
 </head>
@@ -15,6 +15,7 @@
         </div>
     </div>
 
+    <img src="../media/thanus.jpg" alt="" weight="300" height="300">
     <script src="memorial.js"></script>
 </body>
 
